--- a/starters/hw/hw-01-earthquakes/hw-01.Rmd
+++ b/starters/hw/hw-01-earthquakes/hw-01.Rmd
@@ -37,3 +37,7 @@ Remove this text, and add your answer for Exercise 5 here.
 ### Exercise 6
 
 Remove this text, and add your answer for Exercise 5 here.
+
+### Exercise 7
+
+Remove this text, and add your answer for Exercise 5 here.
