--- a/starters/hw/hw-02-water-sanitation/hw-02.Rmd
+++ b/starters/hw/hw-02-water-sanitation/hw-02.Rmd
@@ -1,13 +1,15 @@
-HW 01 - Airbnb listings in Edinburgh
-================
-Insert your name here
-Insert date here
+---
+title: "HW 02 - Water and Sanitation"
+author: "Insert your name here"
+date: "Insert date here"
+output: github_document
+---
 
 ## Load packages and data
 
-``` r
+```{r load-packages-data, message = FALSE}
 library(tidyverse)
-library(dsbox)
+wat_san <- read_csv("data/water-and-sanitation.csv")
 ```
 
 ## Exercises
@@ -24,7 +26,7 @@ Remove this text, and add your answer for Exercise 2 here.
 
 Remove this text, and add your answer for Exercise 3 here.
 
-``` r
+```{r prices-neighbourhoods}
 # remove this comment and add the code for Exercise 3 here
 ```
 
@@ -32,15 +34,15 @@ Remove this text, and add your answer for Exercise 3 here.
 
 Remove this text, and add your answer for Exercise 4 here.
 
-``` r
+```{r top-5-median}
 # remove this comment and add the code for Exercise 4 here
 ```
 
-``` r
+```{r top-5-median-plot}
 # remove this comment and add the code for Exercise 4 here
 ```
 
-``` r
+```{r top-5-median-summary-stats}
 # remove this comment and add the code for Exercise 4 here
 ```
 
@@ -48,6 +50,6 @@ Remove this text, and add your answer for Exercise 4 here.
 
 Remove this text, and add your answer for Exercise 5 here.
 
-``` r
+```{r review-scores-rating}
 # remove this comment and add the code for Exercise 5 here
 ```
