--- a/starters/hw/hw-02-water-sanitation/hw-02-key.Rmd
+++ b/starters/hw/hw-02-water-sanitation/hw-02-key.Rmd
@@ -16,40 +16,91 @@ wat_san <- read_csv("data/water-and-sanitation.csv")
 
 ### Exercise 1
 
-Remove this text, and add your answer for Exercise 1 here.
+There are `r nrow(wat_san)` observations in the dataset.
 
 ### Exercise 2
 
-Remove this text, and add your answer for Exercise 2 here.
+Each row in `wat_san` corresponds to a different year of water and sanitation access observations for each country/entity.
 
 ### Exercise 3
 
-Remove this text, and add your answer for Exercise 3 here.
+Rates of open defecation appear have been reduced.
+There are fewer outlier countries with very high rates, and the height of the lowest possible, 0-1% rate (depends on student choice of bin size for upper limit here), has increased since 2000.
 
-```{r prices-neighbourhoods}
-# remove this comment and add the code for Exercise 3 here
+```{r no-sanitation-years}
+ggplot(data = wat_san, mapping = aes(x = sanitation_none)) +
+  geom_histogram(binwidth = 1) +
+  facet_wrap(~Year)
 ```
 
 ### Exercise 4
 
-Remove this text, and add your answer for Exercise 4 here.
+It does not appear that the complete absence of water and sanitation access are well correlated in the 5 countries with the lowest sanitation access.
 
-```{r top-5-median}
-# remove this comment and add the code for Exercise 4 here
-```
-
-```{r top-5-median-plot}
-# remove this comment and add the code for Exercise 4 here
-```
-
-```{r top-5-median-summary-stats}
-# remove this comment and add the code for Exercise 4 here
+```{r bottom-5-2000}
+wat_san %>% 
+  filter(Year == 2000) %>% 
+  slice_max(sanitation_none, n = 5) %>% 
+  arrange(desc(sanitation_none))
 ```
 
 ### Exercise 5
 
-Remove this text, and add your answer for Exercise 5 here.
+This does support my previous conclusion that there is no clear relationship between `water_none` and `sanitation_none` because there is so much scatter in the data.
 
-```{r review-scores-rating}
-# remove this comment and add the code for Exercise 5 here
+```{r all-2000-plot}
+wat_san %>% 
+  filter(Year == 2000) %>% 
+  ggplot(aes(x = water_none, y = sanitation_none)) + 
+  geom_point()
+```
+
+### Exercise 6
+
+The countries with the largest percentage of the population with no sanitation access have changed between 2000 and 2020.
+Ethiopia, Cambodia, Eritrea, and India are no longer in the bottom 5 but Chad, South Sudan, Benin and Namibia are now present.
+
+```{r bottom-5-2020}
+wat_san %>%
+  filter(Year == 2020) %>% 
+  slice_max(sanitation_none, n = 5) 
+```
+
+### Exercise 7
+
+Between 2000 and 2020, the summary statistics all decreased in values, indicating lower amounts of open defecation and lack of access to clean water.
+
+Overall, values for no sanitation are still higher than values for no water access.
+
+```{r progress-summary}
+wat_san %>% 
+  filter(Year == 2000 & Entity != "World" | Year == 2020 & Entity != "World") %>% 
+  group_by(Year) %>% 
+  summarize(water_none_min = min(water_none, na.rm = T),
+            water_none_mean = mean(water_none, na.rm = T),
+            water_none_median = median(water_none, na.rm = T),
+            water_none_stdev = sd(water_none, na.rm = T),
+            water_none_iqr = IQR(water_none, na.rm = T),
+            water_none_max = max(water_none, na.rm = T),
+            
+            sanitation_none_min = min(sanitation_none, na.rm = T),
+            sanitation_none_mean = mean(sanitation_none, na.rm = T),
+            sanitation_none_median = median(sanitation_none, na.rm = T),
+            sanitation_none_stdev = sd(sanitation_none, na.rm = T),
+            sanitation_none_iqr = IQR(sanitation_none, na.rm = T),
+            sanitation_none_max = max(sanitation_none, na.rm = T)
+
+            )
+  
+```
+
+### Exercise 8
+
+Cambodia and India both dropped out of the top 5 for open defecation because rates of open defecation dropped faster there than the world average, and much faster than in Chad and Niger, where rates stayed almost constant.
+
+```{r country-global-changes}
+wat_san %>% 
+  filter(Entity == "World" | Entity == "India" | Entity == "Cambodia" | Entity == "Niger" | Entity == "Chad") %>% 
+  ggplot(aes(Year, sanitation_none, color = Entity)) +
+  geom_line()
 ```
