--- a/labs/lab-01/lab-01-hello-r.Rmd
+++ b/labs/lab-01/lab-01-hello-r.Rmd
@@ -85,7 +85,7 @@ You can always refer back to this lab for a detailed list of the steps involved 
 knitr::include_graphics("img/clone-repo-link.png")
 ```
 
--   On GitHub, click on the green **Clone or download** button, select **Use HTTPS** (this might already be selected by default, and if it is, you'll see the text **Clone with HTTPS** as in the image below). Click on the clipboard icon to copy the repo URL.
+-   On GitHub, click on the green **Code** button, select **Use HTTPS** (this might already be selected by default, and if it is, you'll see the text **Clone with HTTPS** as in the image below). Click on the clipboard icon to copy the repo URL.
 
 ```{r new-project-from-gh, fig.margin = TRUE, echo = FALSE, fig.width=3}
 knitr::include_graphics("img/new-project-from-gh.png")
